--- a/BBKEEM.html
+++ b/BBKEEM.html
@@ -66,6 +66,11 @@
             <p class="malifont mt-5 text-center">
                 It’s strange because Baby Keem has always had a strong sense of identity. Whether he’s claiming to be 50 Cent or clowning on his lover’s ex, it’s easy to tell when you’re listening to a Baby Keem song. Much of The Melodic Blue is devoted to trying on other artist’s sounds when it would have benefited from more of Keem refining what already worked about his. An album this theatrical and expansive suggests Keem is aiming for the next level. He doesn’t have to fully open his mind and heart to be a great artist, but he does need to retain his own voice.
             </p>
+            <p class="justify-content-center d-flex malifont text-center""> 
+               <a class="hvr" href="https://www.youtube.com/watch?v=IkuBYRUwWdg" target="_blank">
+                   Chek latest Top song of baby K,where he be Rockin' with his cousin aka KDot
+               </a>     
+            </p>
         </div>    
     </section>
     <footer class="col-12 mt-5 fttr" id="fttr">
