--- a/index.html
+++ b/index.html
@@ -12,148 +12,160 @@
     <title>WEBB</title>
 </head>
 <body>
-    <header class="col-12">
-        <div class="d-flex justify-content-between align-items-center">
-            <div class="col-4 logo">
-                <h1 class="logotext">
-                    <a href="index.html">WAZapp?</a>
-                </h1>
+    <div class="container-fluid">
+        <header class="col-12 col-sm">
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="col-4 logo">
+                    <h1 class="logotext">
+                        <a href="index.html">WAZapp?</a>
+                    </h1>
+                </div>
+                <div class="col-4">
+                    <ul class="navul d-flex justify-content-between">
+                        <li>
+                            <a class="mali hvr" href="#firsthrf">About Us</a>
+                        </li>
+                        <li>
+                            <a class="mali hvr" href="Articles.html">Articles</a>     
+                        </li>
+                        <li>
+                            <a class="mali hvr" href="#fttr">Contact</a>
+                        </li>
+                    </ul>      
+                </div>
+                <div class="col-4 d-flex flex-row-reverse">
+                    <button class="btns align-items-center">
+                        <p class="p">
+                            Sign in
+                        </p>
+                    </button>
+                    <button class="btns">
+                        <p class="p">
+                            Register
+                        </p>
+                    </button>
+                </div>
             </div>
-            <div class="col-4">
-                <ul class="navul d-flex justify-content-between">
-                    <li>
-                        <a class="mali hvr" href="#firsthrf">About Us</a>
-                    </li>
-                    <li>
-                        <a class="mali hvr" href="Articles.html">Articles</a>     
-                    </li>
-                    <li>
-                        <a class="mali hvr" href="#fttr">Contact</a>
-                    </li>
-                </ul>      
-            </div>
-            <div class="col-4 d-flex flex-row-reverse">
-                <button class="btns align-items-center">
-                    <p class="p">
-                        Sign in
-                    </p>
-                </button>
-                <button class="btns">
-                    <p class="p">
-                        Register
-                    </p>
-                </button>
-            </div>
+        </header>
         </div>
-    </header>
-    <section class="mt-5 col-12 justify-content-between d-flex">
-      <div class="col-12">
-        <div class="justify-content-center d-flex">
+        <div class="container-fluid">
+        <section class="mt-5 col-12 justify-content-between d-flex">
+          <div class="col-12">
             <div class="justify-content-center d-flex">
-                <h1 class="mrkrfont" id="firsthrf">
-                    what's WAZapp?
-                </h1>
+                <div class="justify-content-center d-flex">
+                    <h1 class="mrkrfont" id="firsthrf">
+                        what's WAZapp?
+                    </h1>
+                </div>
             </div>
+                <div class="mt-5 col-12 malifont text-center">
+                    <p>
+                        Wazapp is daily Hip-Hop news web-site,where u can find some interesting articles about worldwide artists and some freshman too.itself has some kind of reminder funtction about Hip-Hop activities:Album releases,live shows,new collaborations.
+                    </p>
+                    <p class="mt-5">
+                        The near future we wanna add some interactive rating system,which gon be for yall users,u'll be able to post publicly ur opinion 'bout anything.
+                    </p>
+                    <p>
+                        At least but not last,yall gon' be able to chek web and see Wazapp,U gon' be asked Wazapp,yall gon' see Wazapp in Hip-Hop industry.That's all we wanted to share,so tell us fam,Wazapp?
+                    </p>
+                </div>
+                <div class="col-12 d-flex mt-5">
+                    <img class="col-4" src="imgs/png-transparent-record-player-needle-retro-dj-old-school-deejay-scratch-hip-hop-vector-_1_.svg">
+                    <p class="malifont col-8 text-center">
+                        By the way,Every User has chance to win prizes,the only thing yall have to do is not to miss weekly quizzes.The rules are simple,who manages to get the highest score of weekly quizzes,that guy is the winner.prizes can be different,it might be two tickets for some artists' liveshows,or newly released albums with signature of artist and etc.So don't forget to chek ur profile for quizzes and who knows what u might win?
+                    </p>
+                </div>
+            </div>
+          <div>        
+        </section>
         </div>
-            <div class="mt-5 col-12 malifont text-center">
-                <p>
-                    Wazapp is daily Hip-Hop news web-site,where u can find some interesting articles about worldwide artists and some freshman too.itself has some kind of reminder funtction about Hip-Hop activities:Album releases,live shows,new collaborations.
-                </p>
-                <p class="mt-5">
-                    The near future we wanna add some interactive rating system,which gon be for yall users,u'll be able to post publicly ur opinion 'bout anything.
-                </p>
-                <p>
-                    At least but not last,yall gon' be able to chek web and see Wazapp,U gon' be asked Wazapp,yall gon' see Wazapp in Hip-Hop industry.That's all we wanted to share,so tell us fam,Wazapp?
-                </p>
+        <div class="container-fluid">
+        <section class="col-12 mt-5 justify-content-center d-flex">
+            <div class="d-flex col-12 justify-content-center">
+                <div class="col-8 d-flex justify-content-center text-center align-items-center">
+                    <details>
+                          <summary class="hvr malifont">What u Listenin' to?</summary>
+                        <option class="malifont">
+                            <p>
+                                Is it Trap?
+                            </p>
+                        </option>
+                        <option class="malifont">
+                            <p>
+                                Is it Boom-Bap?
+                            </p>
+                        </option>
+                        <option class="malifont">
+                                Is it Cloud rap?
+                        </option>
+                        <option class="malifont">
+                                Is it G' Rap?
+                        </option>
+                        <option class="malifont">
+                                Or is it Chopped and Screwed?
+                        </option>
+                        <option class="malifont">
+                            aaight...We got U
+                        </option>
+                    </details>
+                </div>
+                 <img class="col-4" src="imgs/png-transparent-hip-hop-elements-hip-hop-music-recorder.svg">
             </div>
-            <div class="col-12 d-flex mt-5">
-                <img class="col-4" src="imgs/png-transparent-record-player-needle-retro-dj-old-school-deejay-scratch-hip-hop-vector-_1_.svg">
-                <p class="malifont col-8 text-center">
-                    By the way,Every User has chance to win prizes,the only thing yall have to do is not to miss weekly quizzes.The rules are simple,who manages to get the highest score of weekly quizzes,that guy is the winner.prizes can be different,it might be two tickets for some artists' liveshows,or newly released albums with signature of artist and etc.So don't forget to chek ur profile for quizzes and who knows what u might win?
-                </p>
-            </div>
+        </section>
         </div>
-      <div>        
-    </section>
-    <section class="col-12 mt-5 justify-content-center d-flex">
-        <div class="d-flex col-12 justify-content-center">
-            <div class="col-8 d-flex justify-content-center text-center align-items-center">
-                <details>
-                      <summary class="hvr malifont">What u Listenin' to?</summary>
-                    <option class="malifont">
-                        <p>
-                            Is it Trap?
-                        </p>
-                    </option>
-                    <option class="malifont">
-                        <p>
-                            Is it Boom-Bap?
-                        </p>
-                    </option>
-                    <option class="malifont">
-                            Is it Cloud rap?
-                    </option>
-                    <option class="malifont">
-                            Is it G' Rap?
-                    </option>
-                    <option class="malifont">
-                            Or is it Chopped and Screwed?
-                    </option>
-                    <option class="malifont">
-                        aaight...We got U
-                    </option>
-                </details>
+        <div class="container-fluid">
+        <section class="mt-5 col-12 justify-content-center d-flex">
+            <div class="col-12 d-flex justify-content-between">
+                <img class="col-4" src="imgs/phonograph-record-victrola-vintage-music-center-with-cd-player-45-rpm-adapter-png-favpng-WDPCGXn9C4n.svg">
+                <div class="col-8 malifont2 text-center mt-custom2">
+                    <p>
+                        U can listen 'em tracks and news about artists from every Hip-Hop sub-genre.That's on us.U like 'em flexing trappers or U 're kinda Old School head?Or U tryna avoid all these fake stuff and only listenin' to Real G's?Or U enjoy with manipulated tracks as a Chopped and Screwed?
+                    <p>
+                        Just make a choice and get stick with Us...Dont't Forget to ask everybody Wazapp?
+                    </p>
+                    </p>
+                </div>
             </div>
-             <img class="col-4" src="imgs/png-transparent-hip-hop-elements-hip-hop-music-recorder.svg">
+        </section>
         </div>
-    </section>
-    <section class="mt-5 col-12 justify-content-center d-flex">
-        <div class="col-12 d-flex justify-content-between">
-            <img class="col-4" src="imgs/phonograph-record-victrola-vintage-music-center-with-cd-player-45-rpm-adapter-png-favpng-WDPCGXn9C4n.svg">
-            <div class="col-8 malifont2 text-center mt-custom2">
-                <p>
-                    U can listen 'em tracks and news about artists from every Hip-Hop sub-genre.That's on us.U like 'em flexing trappers or U 're kinda Old School head?Or U tryna avoid all these fake stuff and only listenin' to Real G's?Or U enjoy with manipulated tracks as a Chopped and Screwed?
-                <p>
-                    Just make a choice and get stick with Us...Dont't Forget to ask everybody Wazapp?
-                </p>
-                </p>
-            </div>
-        </div>
-    </section>
-    <section class="mt-5 col-12 justify-content-between d-flex">
-        <div class="col-12">
-          <div class="justify-content-center d-flex">
+        <div class="container-fluid">
+        <section class="mt-5 col-12 justify-content-between d-flex">
+            <div class="col-12">
               <div class="justify-content-center d-flex">
-                  <h1 class="mrkrfont">
-                      That's WAZapp!
-                  </h1>
+                  <div class="justify-content-center d-flex">
+                      <h1 class="mrkrfont">
+                          That's WAZapp!
+                      </h1>
+                  </div>
               </div>
-          </div>
-    </section class="mt-5">
-    <footer class="col-12 mt-5 fttr" id="fttr">
-        <div class="col-12 justify-content-center d-flex">
-            <p class="malifont2 mt-custom text-center">
-                Follow Us: 
-            </p>
-            <div>
-            <a href="https://www.facebook.com/">
-                <img class="socmedia" src="imgs/facebook-2868.svg">
-            </a>
-            <a href="https://www.instagram.com/">
-                <img class="socmedia" src="imgs/black-instagram-logo-3497.svg">
-            </a>
-            <a href="https://twitter.com/?lang=en">
-                <img class="socmedia" src="imgs/twitter-99.svg">
-            </a>
-            </div>
+        </section class="mt-5">
         </div>
-        <div class="col-12 mt-5 justify-content-center d-flex">
-            <div class="justify-content-center d-flex">
-            <p>
-                Ⓒ All rights reserved.Wazapp 2022
-            </p> 
+        <div class="container-fluid">
+        <footer class="col-12 mt-5 fttr" id="fttr">
+            <div class="col-12 justify-content-center d-flex">
+                <p class="malifont2 mt-custom text-center">
+                    Follow Us: 
+                </p>
+                <div>
+                <a href="https://www.facebook.com/">
+                    <img class="socmedia" src="imgs/facebook-2868.svg">
+                </a>
+                <a href="https://www.instagram.com/">
+                    <img class="socmedia" src="imgs/black-instagram-logo-3497.svg">
+                </a>
+                <a href="https://twitter.com/?lang=en">
+                    <img class="socmedia" src="imgs/twitter-99.svg">
+                </a>
+                </div>
             </div>
+            <div class="col-12 mt-5 justify-content-center d-flex">
+                <div class="justify-content-center d-flex">
+                <p>
+                    Ⓒ All rights reserved.Wazapp 2022
+                </p> 
+                </div>
+            </div>
+        </footer>
         </div>
-    </footer>
 </body>
 </html>
